--- a/college/templates/home.html
+++ b/college/templates/home.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <title>Welcome to Tchonang University</title>
   </head>
@@ -28,22 +29,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'home' %}">ACCUEIL<span class="sr-only">(current)</span></a>
         </li>
           <li class="nav-item">
-            <a class="nav-link" href="">A PROPOS</a>
+            <a class="nav-link" href="{% url 'home' %}">A PROPOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">PROGRAMMES & ADMISSION</a>
+            <a class="nav-link" href="{% url 'home' %}">PROGRAMMES & ADMISSION</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">ETUDIANTS</a>
+            <a class="nav-link" href="{% url 'home' %}">ETUDIANTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">CONTACT</a>
+            <a class="nav-link" href="{% url 'home' %}">CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">MON PORTAIL</a>
+            <a class="nav-link" href="{% url 'home' %}">MON PORTAIL</a>
           </li>
       </ul>
     </div>
@@ -57,13 +58,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="{% static 'images/graduation1.jpg' %}" alt="First slide">
+          <img class="d-block w-100" src="{% static 'images/tchonang1.jpg' %}" alt="First slide">
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="{% static 'images/graduation1.jpg' %}" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="{% static 'images/graduation1.jpg' %}" alt="Third slide">
+          <img class="d-block w-100" src="{% static 'images/tchonang2.jpg' %}" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -75,39 +76,30 @@
         <span class="sr-only">Next</span>
       </a>
   </div>
-      <br><br><br><br>
+      <br><br>
   <!--- Cards providing information ---->
-    <div class="container">
+    <div class="container" style="margin-top=0px">
         <div class="row">
-            <div class="col-sm-3">
-                <div class="card">
-                    <img class="card-img-top img-fluid" src="{% static 'images/teacher.jpg' %}" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">MISSION</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.
-                          This content is a little bit longer. </p>
-                        <p class="card-text"><small class="text-muted">click here to read more</small></p>
-                    </div>
-                </div>
-            </div>
             <div class="col-sm-3">
                 <div class="card">
                     <img class="card-img-top img-fluid" src="{% static 'images/student.jpg' %}" alt="Card image cap">
                     <div class="card-block">
-                        <h4 class="card-title">MISSION</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.
-                          This content is a little bit longer. </p>
+                        <h4 class="card-title">Etudiants</h4>
+                        <p class="card-text">Les Services à la vie étudiante participent à la formation et contribuent
+                            au mieux-être des étudiants en mettant à leur disposition des
+                            ressources et des services. </p>
                         <p class="card-text"><small class="text-muted">click here to read more</small></p>
                     </div>
                 </div>
             </div>
+
             <div class="col-sm-3">
                 <div class="card">
                     <img class="card-img-top img-fluid" src="{% static 'images/assignment.jpg' %}" alt="Card image cap">
                     <div class="card-block">
-                        <h4 class="card-title">MISSION</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.
-                          This content is a little bit longer. </p>
+                        <h4 class="card-title">Programmes</h4>
+                        <p class="card-text">Parcourez les grands domaines d’études représentés à l’Université Tchonang
+                            et consultez les programmes qui leur sont associés. </p>
                         <p class="card-text"><small class="text-muted">click here to read more</small></p>
                     </div>
                 </div>
@@ -116,16 +108,26 @@
                 <div class="card">
                     <img class="card-img-top img-fluid" src="{% static 'images/tchonang2.jpg' %}" alt="Card image cap">
                     <div class="card-block">
-                        <h4 class="card-title">MISSION</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.
-                          This content is a little bit longer. </p>
+                        <h4 class="card-title"><br><br>Admission</h4>
+                        <p class="card-text">Parmi les programmes d’études offerts à l’Université Tchonang, il y a
+                            assurément celui que vous cherchez. Trouvez-le dès maintenant! </p>
+                        <p class="card-text"><small class="text-muted">click here to read more</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="card">
+                    <img class="card-img-top img-fluid" src="{% static 'images/teacher.jpg' %}" alt="Card image cap">
+                    <div class="card-block">
+                        <h4 class="card-title">Mon Portail</h4>
+                        <p class="card-text"><b>monPortail</b> est le lien de communication privilégié entre les diverses
+                            unités administratives, les etudiants, enseignants et les parents </p>
                         <p class="card-text"><small class="text-muted">click here to read more</small></p>
                     </div>
                 </div>
             </div>
          </div>
     </div>
-
 </div>
   </body>
 </html>
