--- a/college/templates/home.html
+++ b/college/templates/home.html
@@ -1,133 +1,88 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 {% load static %}
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>{% block title %}Welcome to Tchonang Univeristy{% endblock %}</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  {% block content %}
 
-    <title>Welcome to Tchonang University</title>
-  </head>
-
-<body>
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-blue bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="{% static 'images/favicon.ico' %}" style="width:50px;">
-      </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'home' %}">ACCUEIL<span class="sr-only">(current)</span></a>
-        </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">A PROPOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">PROGRAMMES & ADMISSION</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">ETUDIANTS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">CONTACT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">MON PORTAIL</a>
-          </li>
-      </ul>
-    </div>
-  </nav>
-  <!---- Carousel Display --->
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="{% static 'images/tchonang1.jpg' %}" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="{% static 'images/graduation1.jpg' %}" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="{% static 'images/tchonang2.jpg' %}" alt="Third slide">
-        </div>
+      <!---- Carousel Display --->
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="{% static 'images/tchonang1.jpg' %}" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="{% static 'images/graduation1.jpg' %}" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="{% static 'images/tchonang2.jpg' %}" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-  </div>
-      <br><br>
-  <!--- Cards providing information ---->
-    <div class="container" style="margin-top=0px">
-        <div class="row">
-            <div class="col-sm-3">
-                <div class="card">
-                    <img class="card-img-top img-fluid" src="{% static 'images/student.jpg' %}" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">Etudiants</h4>
-                        <p class="card-text">Les Services à la vie étudiante participent à la formation et contribuent
-                            au mieux-être des étudiants en mettant à leur disposition des
-                            ressources et des services. </p>
-                        <p class="card-text"><small class="text-muted">click here to read more</small></p>
+          <br><br>
+      <!--- Cards providing information ---->
+        <div class="container" style="margin-top=0px">
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="{% static 'images/student.jpg' %}" alt="Card image cap">
+                        <div class="card-block">
+                            <h4 class="card-title">Etudiants</h4>
+                            <p class="card-text">Les Services à la vie étudiante participent à la formation et contribuent
+                                au mieux-être des étudiants en mettant à leur disposition des
+                                ressources et des services. </p>
+                            <p class="card-text"><small class="text-muted">click here to read more</small></p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-sm-3">
-                <div class="card">
-                    <img class="card-img-top img-fluid" src="{% static 'images/assignment.jpg' %}" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">Programmes</h4>
-                        <p class="card-text">Parcourez les grands domaines d’études représentés à l’Université Tchonang
-                            et consultez les programmes qui leur sont associés. </p>
-                        <p class="card-text"><small class="text-muted">click here to read more</small></p>
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="{% static 'images/assignment.jpg' %}" alt="Card image cap">
+                        <div class="card-block">
+                            <h4 class="card-title">Programmes</h4>
+                            <p class="card-text">Parcourez les grands domaines d’études représentés à l’Université Tchonang
+                                et consultez les programmes qui leur sont associés. </p>
+                            <p class="card-text"><small class="text-muted">click here to read more</small></p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <img class="card-img-top img-fluid" src="{% static 'images/tchonang2.jpg' %}" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title"><br><br>Admission</h4>
-                        <p class="card-text">Parmi les programmes d’études offerts à l’Université Tchonang, il y a
-                            assurément celui que vous cherchez. Trouvez-le dès maintenant! </p>
-                        <p class="card-text"><small class="text-muted">click here to read more</small></p>
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="{% static 'images/tchonang2.jpg' %}" alt="Card image cap">
+                        <div class="card-block">
+                            <h4 class="card-title"><br><br>Admission</h4>
+                            <p class="card-text">Parmi les programmes d’études offerts à l’Université Tchonang, il y a
+                                assurément celui que vous cherchez. Trouvez-le dès maintenant! </p>
+                            <p class="card-text"><small class="text-muted">click here to read more</small></p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <img class="card-img-top img-fluid" src="{% static 'images/teacher.jpg' %}" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">Mon Portail</h4>
-                        <p class="card-text"><b>monPortail</b> est le lien de communication privilégié entre les diverses
-                            unités administratives, les etudiants, enseignants et les parents </p>
-                        <p class="card-text"><small class="text-muted">click here to read more</small></p>
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="{% static 'images/teacher.jpg' %}" alt="Card image cap">
+                        <div class="card-block">
+                            <h4 class="card-title">Mon Portail</h4>
+                            <p class="card-text"><b>monPortail</b> est le lien de communication privilégié entre les diverses
+                                unités administratives, les etudiants, enseignants et les parents </p>
+                            <p class="card-text"><small class="text-muted">click here to read more</small></p>
+                        </div>
                     </div>
                 </div>
-            </div>
-         </div>
+             </div>
+        </div>
     </div>
-</div>
-  </body>
-</html>
+    <br>
+  {% endblock %}
