--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,3 +66,213 @@ body
 .carousel-control.right {
   background-image: none;
 }
+
+/* Footer -----------------
+*/
+
+.context-dark, .bg-gray-dark, .bg-primary {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.footer-classic a, .footer-classic a:focus, .footer-classic a:active {
+    color: #ffffff;
+}
+.nav-list li {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.nav-list li a:hover:before {
+    margin-left: 0;
+    opacity: 1;
+    visibility: visible;
+}
+
+ul, ol {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.social-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 23px;
+    font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.5);
+}
+.social-container .col {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.nav-list li a:before {
+    content: "\f14f";
+    font: 400 21px/1 "Material Design Icons";
+    color: #4d6de6;
+    display: inline-block;
+    vertical-align: baseline;
+    margin-left: -28px;
+    margin-right: 7px;
+    opacity: 0;
+    visibility: hidden;
+    transition: .22s ease;
+}
+/* ---------GOOGLE MAP ---------------
+*/
+.embed-responsive-100x400px{
+  padding-bottom: 400px;
+}
+
+.map {
+    min-width: 300px;
+    min-height: 300px;
+    width: 100%;
+    height: 100%;
+}
+
+.header {
+    background-color: #F5F5F5;
+    color: #36A0FF;
+    height: 70px;
+    font-size: 27px;
+    padding: 10px;
+}
+
+/*-------------
+*/
+.embed-responsive-100x400px{
+  padding-bottom: 400px;
+}
+
+.google-maps {
+    position: relative;
+    padding-bottom: 75%; // This is the aspect ratio
+    height: 0;
+    overflow: hidden;
+}
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+}
+
+
+.googleMap{
+  position: relative;
+  height: 0;
+  padding-bottom: 50%;
+}
+
+.googleMap iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/*----- Social Media Button styling --------*/
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+    -webkit-transform: rotate(360deg);
+    -webkit-transition: -webkit-transform 0.75s ease-in-out;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+/* Youtube */
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+/* Instagram */
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+/*-------- Mon portail styling--------
+*/
+.brings-school-website-section {
+    background-image: url("{% static 'images/collegemgmt.png' %}");
+    background-repeat: no-repeat, repeat;
+    background-color: #cccccc;
+}
+
+.text-center-line {
+    text-align: center;
+}
+
+.lead {
+    text-align: center;
+}
+
+.brings-box-icon {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    background-color: white;
+    width: 100px;
+    height:100px;
+    border-radius: 50%;
+}
+
+.brings-box-heading {
+    text-align: center;
+    font-size: larger;
+    background-color: white;
+    border-radius: 25px;
+    margin-bottom: 5px;
+}
+
+
+.brings-box-content {
+    background-color: white;
+    border-radius: 25px;
+    display: block;
+    margin-left:auto;
+    margin-right: auto;
+
+}
+
+.brings-box-content ul {
+    display: inline-block;
+    text-align:left;
+    color: black;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    list-style-position: inside;
+    list-style-type: square;
+}
